<resources>
    <string name="app_name">DEKUT APP</string>
    <string name="email">Enter your email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign Up</string>
    <string name="year">Year</string>
    <string name="course">Course</string>
    <string name="registration_number">Registration Number</string>
    <string name="name">Name</string>
    <string name="student_email">Student Email</string>
    <string name="register">Sign Up</string>
    <string name="have_an_account_already_sign_in">Have an account already? Sign in</string>
    <string name="splash">DEKUT APP</string>
    <string name="title">Title</string>
    <string name="send_message">Send Message</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="news">News</string>
    <string name="communicate">Communicate</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
    <string name="dekut_app">Dekut App</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="save">Save</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter name</string>
    <string name="school_schedule">School Schedule</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="notification">Notification</string>
    <string name="email_to_send_reset_link">Email to send reset Link</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="better_life_through_technology">Better Life through Technology</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>