<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.NewsFragment">

    <EditText
        android:id="@+id/name"
        android:hint="@string/enter_name"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/email"
        android:hint="@string/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/save"
        android:text="@string/save"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textSize="40px"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>