<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="10dp"
    tools:context=".ui.activities.RegisterActivity">

    <ImageView
        android:id="@+id/registerImageView"
        android:src="@drawable/dekut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/name"
        android:maxLines="1"
        android:ems="10"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/name"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:inputType="text"
        android:background="@drawable/round_edittext"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>
    <EditText
        android:maxLines="1"
        android:textSize="20sp"
        android:ems="10"
        android:id="@+id/regno"
        android:hint="@string/registration_number"
        android:layout_below="@+id/name"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/round_edittext"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <EditText
        android:maxLines="1"
        android:ems="10"
        android:textSize="20sp"
        android:id="@+id/course"
        android:inputType="text"
        android:hint="@string/course"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@id/regno"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_edittext"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>
    <EditText
        android:id="@+id/year"
        android:maxLines="1"
        android:textSize="20sp"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/year"
        android:layout_below="@+id/course"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:background="@drawable/round_edittext"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <EditText
        android:id="@+id/email"
        android:textSize="20sp"
        android:ems="10"
        android:maxLines="1"
        android:layout_below="@+id/year"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/round_edittext"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/student_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>
    <EditText
        android:layout_below="@+id/email"
        android:background="@drawable/round_edittext"
        android:id="@+id/password"
        android:hint="Password"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:maxLines="1"
        android:fontFamily="sans-serif-medium"
        android:inputType="textPassword"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <Button
        android:id="@+id/registerUser"
        android:layout_below="@+id/email"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginStart="10dp"
        android:maxLines="1"
        android:textSize="20sp"
        android:ems="10"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_marginEnd="10dp"
        android:background="@drawable/round_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/registerTextView"
        android:layout_marginTop="20dp"
        android:ems="1"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/registerUser"
        android:text="@string/have_an_account_already_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>