<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    tools:context=".ui.activities.ResetPassword">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="20dp"
        android:src="@drawable/dekut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_below="@+id/imageView"
        android:id="@+id/usermail"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textAllCaps="false"
        android:textColorHint="@color/black"
        android:background="@drawable/round_edittext"
        android:layout_marginStart="10dp"
        android:hint="@string/email_to_send_reset_link"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>


    <Button
        android:layout_below="@+id/usermail"
        android:backgroundTint="@color/green"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/send_reset_link"
        android:id="@+id/sendreset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>