<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    tools:context=".MainActivity">
    <ImageView
        android:layout_marginTop="20dp"
        android:src="@drawable/dekut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


<EditText
    android:id="@+id/email"
    android:inputType="textEmailAddress"
    android:layout_marginTop="220dp"
    android:maxLines="1"
    android:ems="10"
    android:textStyle="normal"
    android:textSize="16sp"
    android:fontFamily="sans-serif-medium"
    android:textColor="@color/black"
    android:hint="@string/email"
    android:background="@drawable/round_edittext"
    android:textAlignment="textStart"
    android:textAllCaps="false"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_width="match_parent"
    android:layout_height="45dp"/>

    <EditText
        android:id="@+id/password"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:maxLines="1"
        android:ems="1"
        android:textAlignment="textStart"
        android:textStyle="normal"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/password"
        android:background="@drawable/round_edittext"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <Button
        android:id="@+id/login"
        android:layout_below="@+id/password"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="normal"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:background="@drawable/round_edittext"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/loginTextView"
        android:layout_below="@+id/login"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:text="@string/dont_have_an_account_sign_up"
        android:textStyle="normal"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-medium"
        android:layout_height="wrap_content"/>
</RelativeLayout>