<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <TextView
        android:id="@+id/contact_textView"
        android:layout_marginTop="20sp"
        android:text="@string/contact_us"
        android:textSize="30sp"
        android:textColor="@color/green"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/description"
        android:layout_below="@+id/contact_textView"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/title"
        android:inputType="text"
        android:textAlignment="center"
        android:background="@drawable/round_edittext"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <EditText
        android:id="@+id/message"
        android:text="Message"
        android:textAlignment="center"
        android:background="@drawable/round_edittext"
        android:layout_below="@+id/description"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"/>

    <Button
        android:id="@+id/send"
        android:layout_below="@+id/message"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:background="@drawable/round_edittext"
        android:layout_marginStart="10dp"
        android:text="@string/send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>